client/src/css/quicknotes.css
/** Quick Notes Styles **/

/* Import Oleo Script Font */
@import url("https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap");

/* Import Raleway Font */
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

/* Variable Declarations */
:root {
  --note-background-primary: white;
  --note-header-text-color: #333333;
  --note-text-color-primary: #828282;

  /* Color Definitions */
  --color-black: black;
  --color-black-hover: #151515;
  --color-white: white;
  --color-white-hover: #ededed;
  --color-grey: #A1A1A1;

  --color-red: #eb5757;
  --color-red-dark: #cf4242;
  --color-orange: #f2994a;
  --color-orange-dark: #e98034;
  --color-yellow: #f2c94c;
  --color-yellow-dark: #edac2f;
  --color-green: #27ae60;
  --color-green-dark: #2b9843;
  --color-blue: #2f80ed;
  --color-blue-dark: #2c62cd;
  --color-purple: #bb6bd9;
  --color-purple-dark: #964cc3;
}

/* Quick Notes List Styles */

.quicknotes-list {
  display: grid;
  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
  grid-template-columns: repeat(auto-fit, 250px);
  grid-auto-rows: 220px;
  padding: 2rem 1.25rem 1rem 1.25rem;
  height: calc(100vh - 80px);
  max-width: 100vw;
  overflow: auto;

  z-index: 1;
}

/* General Quick Note Styles */
.quicknote-header {
  width: 230.5px;
  height: 25px;
  color: var(--note-header-text-color);

  display: flex;
  align-items: center;
  justify-content: space-between;

  background-color: var(--color-red);
  border-bottom: 1px solid #828282;
}

.quicknote-name, .quicknote-title-input {
  margin: 0 .5rem 0 .5rem;
}

.quicknote {
  background-color: var(--note-background-primary);
  margin: 0 10px 10px 10px;
  width: 230px;
  height: 200px;

  justify-self: center;

  font-size: 13px;
  font-family: 'Source Sans Pro', sans-serif !important;
  border: 1px solid #828282;
}

.quicknote textarea {
  font-size: 13px;
  font-family: 'Source Sans Pro', sans-serif !important;
  color: var(--note-text-color-primary);
}

.quicknote-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  white-space: pre-wrap; /* keep spacing added to text */
  padding: 0.5rem;
  color: var(--note-text-color-primary);
  

  height: calc(100% - 25px - 1rem);
}

.quicknote-content textarea {
  width: 100%;
}

.quicknote-footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.delete-icon {
  transition: color 0.2s ease 0s;
}

.delete-icon:hover {
  cursor: pointer;
  color: var(--color-red-dark);
}

/* New Quick Note Styles */
.quicknote.new .quicknote-header  {
  background-color: var(--color-grey);
}

.quicknote-title-input {
  border: none;
  background-color: inherit;
  font-size: 13px;
  font-family: 'Source Sans Pro', sans-serif;
  width: 100%;
}

.quicknote-title-input:focus {
  outline: none;
}

.quicknote.new textarea {
  border: none;
  resize: none;
  background-color: inherit;
}

.quicknote.new textarea:focus {
  outline: none;
}

.add-quicknote-button {
  border: none;
  background-color: rgb(0,0,0,0);
  color: var(--note-text-color-primary);
  font-size: 14px;
  transition: color 0.2s ease 0s;
}

.add-quicknote-button:hover {
  cursor: pointer;
  color: var(--color-blue-dark);
}

